
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-05-06 DariusIII
	Upd: Comment out max_matches(deprecated since sphinx 2.2.3) and change sphinx.pid location to proper /var/run/sphinxsearch/searchd.pid
2016-05-05 niel
	Mrg: PR 2121, from meganomic - Yahoo search fix.
2016-05-05 bart39
	Fix: update collection regex in a.b.mom
	Fix: Missing escape on release triggers.
2016-05-03 niel
	Fix: Force li3 connections to ignore Host/Port settings if a socket is provided.
	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
	Fix: Reinstate the LINES TERMINATED BY clause to loading data files to override default
	behaviour of only using '\n' instead of '\r\n' that we need (Closes Issue 2104).
2016-05-02 bart39
	Mrg: PR 2127, from rainje - New release name format not matched with reqid
	Chg: update schema and replace triggers for above PR.
2016-04-30
	Mrg: dev => Latest-testing to prepare for updating stable 0.x.


2016-05-03 niel
	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
2016-04-28 niel
	Fix: Code style foramtting.
	Fix: Removing pre-install-cmd from composer.json again. It kills the install for new users.
		User on dev branch will have to manually issue the 'git pull' command until I can find a
		work-around for this.
	Fix: Removing post-install-cmd from composer.json It doesn't work if nZEDb's configuration
		file has not been created, which is always the case on new installs.
	Fix: Restore the original method of doing git pull before composer install and update db after.
2016-04-28 DariusIII
	Add: 'gn' case to nfo retrieval in api, to be in line with newznab api spec.
2016-04-27 niel
	Add: Adding new nodes to nzedb.xml. This last script node will hold the date and ordinal of any